--- a/package.json
+++ b/package.json
@@ -19,5 +19,10 @@
   "bugs": {
     "url": "https://github.com/dominik-korsa/new-year-countdown/issues"
   },
-  "homepage": "https://github.com/dominik-korsa/new-year-countdown#readme"
+  "homepage": "https://github.com/dominik-korsa/new-year-countdown#readme",
+  "devDependencies": {
+    "eslint": "^5.11.1",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.14.0"
+  }
 }
