--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Countdown to the New Year",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "./node_modules/.bin/eslint ./",
+    "lint-fix": "./node_modules/.bin/eslint ./ --fix"
   },
   "repository": {
     "type": "git",
