--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,12 @@ node_js:
 
 script:
   - npm run lint
+
+deploy:
+  provider: pages
+  skip-cleanup: true
+  github-token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variable
+  keep-history: true
+  local-dir: ./src/
+  on:
+    branch: master
